# multispline

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py  tutorial.ipynb  tutorial.md
.github/workflows/: .build-package.yml
cpp/include/: spline.hpp
cpp/src/: spline.cpp
cython/: spline_wrap.pyx
multispline/: spline.py
multispline/tests/: test_bicubic.py  test_cubic.py  test_tricubic.py
